--- a/app/views/weekly_schedules/issues/_sidebar.html.erb
+++ b/app/views/weekly_schedules/issues/_sidebar.html.erb
@@ -1,13 +1,9 @@
 <% if controller_name == 'issues' && action_name == 'show' && User.current.allowed_to?(:view_schedule, @project) %>
 <div class="redmine_recurring_tasks">
-  <%
-    schedule = WeeklySchedule.find_by(issue_id: @issue.id)
-  %>
-
   <% if User.current.allowed_to?(:manage_schedule, @project) %>
     <div class="contextual">
-      <% if schedule.present? %>
-        <a href="<%= edit_weekly_schedule_path(schedule.id) %>"><%= l(:button_change) %></a>
+      <% if @issue.weekly_schedule.present? %>
+        <a href="<%= edit_weekly_schedule_path(@issue.weekly_schedule.id) %>"><%= l(:button_change) %></a>
       <% else %>
         <a href="<%= new_weekly_schedule_path(issue_id: @issue.id) %>"><%= l(:button_add) %></a>
       <% end %>
@@ -16,11 +12,11 @@
 
   <h3><%= l(:project_module_redmine_recurring_tasks) %></h3>
 
-  <% if schedule.present? %>
+  <% if @issue.weekly_schedule.present? %>
     <ul>
-      <% schedule.days.each do |field| %>
+      <% @issue.weekly_schedule.days.each do |field| %>
         <li>
-          <%= WeeklySchedule.human_attribute_name(field) %>, <%= schedule.time.to_s(:time) %>
+          <%= WeeklySchedule.human_attribute_name(field) %>, <%= @issue.weekly_schedule.time.to_s(:time) %>
         </li>
       <% end %>
     </ul>
