--- a/app/views/recurring_tasks/_form.html.erb
+++ b/app/views/recurring_tasks/_form.html.erb
@@ -72,6 +72,8 @@
           </td>
 
           <td valign="top" width="60%">
+            <div><%= l('note') %><br><br></div>
+
             <fieldset class="box tabular">
               <div style="float: left; margin-left: 5em;">
                 <p>
