Fix month checkboxes

--- a/app/views/recurring_tasks/_form.html.erb
+++ b/app/views/recurring_tasks/_form.html.erb
@@ -63,7 +63,7 @@
                 <p>
                   <label>
                     <%= m %>
-                    <%= check_box_tag 'recurring_task[months][]', i, checked: @schedule.months[i] %>
+                    <%= check_box_tag 'recurring_task[months][]', i, @schedule.months.include?(i.to_s) %>
                   </label>
                 </p>
                 <% end %>
