--- a/app/views/settings/_redmine_recurring_tasks.html.erb
+++ b/app/views/settings/_redmine_recurring_tasks.html.erb
@@ -5,7 +5,8 @@
   <%= label_tag 'settings[associations]', l(:settings_associations) %>
   <%= select_tag 'settings[associations]',
                  options_for_select(RedmineRecurringTasks.issue_associations, @settings[:associations]),
-                 {multiple: true, size: 20, style: 'width: 50%;'} %>
+                 { multiple: true, size: 20, style: 'width: 50%;' } %>
+  <p class="notice"><%= l(:settings_associations_warning) %></p>
 </p>
 <p>
   <%= button_tag l(:button_reset), type: :button, onClick: '$("#settings_associations option:selected").prop("selected", false);' %>
