--- a/app/views/settings/_redmine_recurring_tasks.html.erb
+++ b/app/views/settings/_redmine_recurring_tasks.html.erb
@@ -11,6 +11,13 @@
 <p>
   <%= button_tag l(:button_reset), type: :button, onClick: '$("#settings_associations option:selected").prop("selected", false);' %>
 </p>
+
+<p>
+  <%= label_tag 'settings[copied_issue_status]', l(:settings_copied_issue_status) %>
+  <%= select_tag 'settings[copied_issue_status]',
+                 options_for_select([[l(:settings_copy_from_original), 0], *IssueStatus.sorted.map { |status| [status.name, status.id] }]),
+                 include_blank: true %>
+</p>
 <p>
   <%= label_tag 'settings[use_anonymous_user]', l(:settings_use_anonymous_user) %>
   <%= check_box_tag 'settings[use_anonymous_user]', 1, @settings[:use_anonymous_user] %>
